--- a/Herbavi/src/app/componentes/registro/registro.component.css
+++ b/Herbavi/src/app/componentes/registro/registro.component.css
@@ -1,39 +1,220 @@
-.carta {
-    width: 50%;
+/* CSS Web Landscape ******************************************************* */
+.carta.web-landscape {
+    width: 60%;
     margin: 0 auto;
-    margin-top: 2%;
-    background-color: #A68BA5;
+    margin-top: 5%;
+    background-color: #DFE2CF;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-right: 20px;
     padding-left: 20px;
-    box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 10px;
+    box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 
-h2 {
+.carta.web-landscape h2 {
     text-align: center;
-    font-size: px;
+    font-size: 40px;
     font-family: 'Times New Roman';
     margin-bottom: 40px;
 }
 
-input {
+.carta.web-landscape input {
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
-label {
+.carta.web-landscape label {
     font-family: 'Times New Roman';
 }
 
-.contenedor-boton {
+.carta.web-landscape .contenedor-boton {
     text-align: center;
 }
 
-.contenedor-boton button {
-    width: 60%;
+.carta.web-landscape .contenedor-boton button {
+    width: 30%;
     margin-top: 10px;
-    background-color: #5C5D67;
+    background-color: #764248;
+    border-radius: 25px;
+}
+
+/* CSS Tablet Landscape ******************************************************* */
+.carta.tablet-landscape {
+    width: 80%;
+    margin: 0 auto;
+    margin-top: 10%;
+    background-color: #DFE2CF;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.carta.tablet-landscape h2 {
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Times New Roman';
+    margin-bottom: 40px;
+}
+
+.carta.tablet-landscape input {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.carta.tablet-landscape label {
+    font-family: 'Times New Roman';
+}
+
+.carta.tablet-landscape .contenedor-boton {
+    text-align: center;
+}
+
+.carta.tablet-landscape .contenedor-boton button {
+    width: 30%;
+    margin-top: 10px;
+    background-color: #764248;
+    border-radius: 25px;
+}
+
+/* CSS Tablet Portrait ******************************************************* */
+.carta.tablet-portrait {
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 20%;
+    background-color: #DFE2CF;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    border-radius: 10px;
+    font-size: 18px;
+    box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.carta.tablet-portrait h2 {
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Times New Roman';
+    margin-bottom: 40px;
+}
+
+.carta.tablet-portrait input {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.carta.tablet-portrait label {
+    font-family: 'Times New Roman';
+}
+
+.carta.tablet-portrait .contenedor-boton {
+    text-align: center;
+}
+
+.carta.tablet-portrait .contenedor-boton button {
+    width: 30%;
+    margin-top: 10px;
+    background-color: #764248;
+    border-radius: 25px;
+}
+
+/* CSS Smartphone Portrait ******************************************************* */
+.carta.smartphone-portrait {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    background-color: #DFE2CF;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+
+.carta.smartphone-portrait h2 {
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Times New Roman';
+}
+
+.carta.smartphone-portrait .cabecera {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.carta.smartphone-portrait input {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.carta.smartphone-portrait label {
+    font-family: 'Times New Roman';
+}
+
+.carta.smartphone-portrait .contenedor-boton {
+    text-align: center;
+}
+
+.carta.smartphone-portrait .contenedor-boton button {
+    width: 40%;
+    margin-top: 10px;
+    background-color: #764248;
+    border-radius: 25px;
+}
+
+/* CSS Smartphone Landscape ******************************************************* */
+.carta.smartphone-landscape {
+    width: 100%;
+    height: 100%;
+    background-color: #DFE2CF;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
+    box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.carta.smartphone-landscape h2 {
+    text-align: center;
+    font-size: 40px;
+    font-family: 'Times New Roman';
+}
+
+.carta.smartphone-landscape .cabecera {
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+.carta.smartphone-landscape .formulario {
+    height: 260px;
+    overflow-y: scroll;
+    border: 2px solid #0000;
+}
+
+.carta.smartphone-landscape input {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.carta.smartphone-landscape label {
+    font-family: 'Times New Roman';
+}
+
+.carta.smartphone-landscape .contenedor-boton {
+    text-align: center;
+}
+
+.carta.smartphone-landscape .contenedor-boton button {
+    width: 40%;
+    margin-top: 10px;
+    background-color: #764248;
     border-radius: 25px;
 }
