--- a/Herbavi/src/styles.css
+++ b/Herbavi/src/styles.css
@@ -1,15 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
-body {
-    background-color: #EDADC7;
-}
+
 html, body { height: 100%; }
 body {
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    margin: 0;
     height: 100%;
-    overflow: hidden
-     }
+    overflow: hidden;
+    background: url(media/fondo3.jpg) no-repeat center center fixed;
+    background-size: cover;
+}
+     
 
 mat-icon {
     cursor: pointer;
