--- a/Herbavi/src/styles.css
+++ b/Herbavi/src/styles.css
@@ -6,8 +6,7 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     height: 100%;
     overflow: hidden;
-    background: url(media/fondo3.jpg) no-repeat center center fixed;
-    background-size: cover;
+    background-color: #EDADC7;
 }
      
 
