--- a/Herbavi/src/app/componentes/home/home.component.html
+++ b/Herbavi/src/app/componentes/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="contenedor">
     <p>
         <mat-toolbar class="toolbar" color="primary">
-            <button mat-icon-button class="example-icon">
-                <mat-icon>menu</mat-icon>
+            <button (click)="productos()" mat-icon-button class="example-icon">
+                <mat-icon>home</mat-icon>
             </button>
             <span class="titulo-toolbar">Herbavi</span>
             <input type="string" placeholder="Nombre de producto" class="form-control">
@@ -10,7 +10,7 @@
                 <mat-icon>search</mat-icon>
             </button>
             <span class="spacer"></span>
-            <button mat-icon-button class="favorite-icon">
+            <button (click)="carrito()" mat-icon-button class="favorite-icon">
                 <mat-icon matBadge="15" matBadgeColor="warn">local_grocery_store</mat-icon>
             </button>
             <button mat-icon-button class="example-icon">
