--- a/Herbavi/src/app/componentes/home/subcomponentes/carrito/carrito.component.html
+++ b/Herbavi/src/app/componentes/home/subcomponentes/carrito/carrito.component.html
@@ -1,52 +1,66 @@
-
-<button mat-icon-button [matMenuTriggerFor]="animals" aria-label="Example icon-button with a menu">
-    <mat-icon>more_vert</mat-icon>
-  </button>
-
-<mat-menu #animals="matMenu">
-  <button mat-menu-item [matMenuTriggerFor]="vertebrates">Vertebrates</button>
-  <button mat-menu-item [matMenuTriggerFor]="invertebrates">Invertebrates</button>
-</mat-menu>
-
-<mat-menu #vertebrates="matMenu">
-  <button mat-menu-item [matMenuTriggerFor]="fish">Fishes</button>
-  <button mat-menu-item [matMenuTriggerFor]="amphibians">Amphibians</button>
-  <button mat-menu-item [matMenuTriggerFor]="reptiles">Reptiles</button>
-  <button mat-menu-item>Birds</button>
-  <button mat-menu-item>Mammals</button>
-</mat-menu>
-
-<mat-menu #invertebrates="matMenu">
-  <button mat-menu-item>Insects</button>
-  <button mat-menu-item>Molluscs</button>
-  <button mat-menu-item>Crustaceans</button>
-  <button mat-menu-item>Corals</button>
-  <button mat-menu-item>Arachnids</button>
-  <button mat-menu-item>Velvet worms</button>
-  <button mat-menu-item>Horseshoe crabs</button>
-</mat-menu>
-
-<mat-menu #fish="matMenu">
-  <button mat-menu-item>Baikal oilfish</button>
-  <button mat-menu-item>Bala shark</button>
-  <button mat-menu-item>Ballan wrasse</button>
-  <button mat-menu-item>Bamboo shark</button>
-  <button mat-menu-item>Banded killifish</button>
-</mat-menu>
-
-<mat-menu #amphibians="matMenu">
-  <button mat-menu-item>Sonoran desert toad</button>
-  <button mat-menu-item>Western toad</button>
-  <button mat-menu-item>Arroyo toad</button>
-  <button mat-menu-item>Yosemite toad</button>
-</mat-menu>
-
-<mat-menu #reptiles="matMenu">
-  <button mat-menu-item>Banded Day Gecko</button>
-  <button mat-menu-item>Banded Gila Monster</button>
-  <button mat-menu-item>Black Tree Monitor</button>
-  <button mat-menu-item>Blue Spiny Lizard</button>
-  <button mat-menu-item disabled>Velociraptor</button>
-</mat-menu>
+<h2 mat-dialog-title style="text-align: center;">Carrito de compras</h2>
+<mat-dialog-content class="mat-typography">
 
 
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" style="width: 100%;">
+    <!-- Columna con el nombre del producto -->
+    <ng-container matColumnDef="nombre">
+      <th mat-header-cell *matHeaderCellDef>Nombre del producto</th>
+      <td mat-cell *matCellDef="let element">{{element.nombre}}</td>
+    </ng-container>
+  
+    <!-- Columna con la cantidad del producto -->
+    <ng-container matColumnDef="cantidad">
+      <th mat-header-cell *matHeaderCellDef>Cantidad</th>
+      <td mat-cell *matCellDef="let element">
+        <input type="number" style="width: 60px;
+        border-radius: 30px;
+        margin-right: 20px;
+        text-align:center;"
+        #cantidad="ngModel" [(ngModel)]="element.cantidad" min="1" max="30"
+         onKeyDown="return false" (change)="actualizarTotal($event)">
+        <span>{{element.cantidad}}</span>
+      </td>
+    </ng-container>
+  
+    <!-- Columna con el precio unitario del producto -->
+    <ng-container matColumnDef="precio">
+      <th mat-header-cell *matHeaderCellDef>Precio Unitario</th>
+      <td mat-cell *matCellDef="let element"> ₡ {{element.precio}}</td>
+    </ng-container>
+  
+    <!-- Columna del subtotal del producto -->
+    <ng-container matColumnDef="subtotal">
+      <th mat-header-cell *matHeaderCellDef>Subtotal</th>
+      <td mat-cell *matCellDef="let element">₡ {{element.precio * element.cantidad}}</td>
+    </ng-container>
+
+    <!-- Columna con un boton para eliminar el producto del carrito -->
+    <ng-container matColumnDef="eliminar">
+      <th mat-header-cell *matHeaderCellDef>Elimnar producto</th>
+      <td mat-cell *matCellDef="let element">
+        <button mat-icon-button class="favorite-icon search-icon" (click)="removeData(element)">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+  <!-- Informacion de la compra -->
+  <div class="container" style="font-size: 18px; margin-top: 30px; margin-bottom: 30px;">
+    <div class="row justify-content-start">
+      <div class="col">
+        Cliente: Kevin Acevedo Rodríguez
+      </div>
+      <div class="col">
+        Total a pagar: ₡ {{total}}
+      </div>
+    </div>
+  </div>
+</mat-dialog-content>
+<mat-dialog-actions align="center">
+  <button mat-button mat-dialog-close>Cerrar</button>
+  <button mat-button (click)="addData()" cdkFocusInitial>Confirmar</button>
+</mat-dialog-actions>
