--- a/Herbavi/src/app/componentes/home/subcomponentes/productos/productos.component.css
+++ b/Herbavi/src/app/componentes/home/subcomponentes/productos/productos.component.css
@@ -1,9 +1,19 @@
 /* CSS Web Landscape  ******************************************************* */
+.footer{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
+mat-paginator {
+    background-color: #c2185b;
+    font-size: 14px;
+  }
 .contenedor-productos.web-landscape .productos {
     width:100%;
-    height: 70vh;
-    max-height: 100%;
+    height: 66vh;
     margin-top: 15px;
+    margin-bottom: 15px;
     overflow-y: scroll;
 }
 
